Revert "Export words in global dictionary to jDV (#2720)"
This reverts commit 29c9d25a8bc277608a7e23cf71bd7521fe9fbbb4.